add lv2 support

--- a/src/makefile
+++ b/src/makefile
@@ -3,11 +3,12 @@
 
 all: jiss.so
 
-CFLAGS ?= -DJISS_NO_DEBUG -O2 -g -Wall -fPIC `pkg-config lua5.1 jack --cflags`
+# CFLAGS ?= -DJISS_NO_DEBUG -O2 -g -Wall -fPIC `pkg-config lua5.1 jack lilv-0 --cflags`
+CFLAGS ?= -O2 -g -Wall -fPIC `pkg-config lua5.1 jack lilv-0 --cflags`
 CXXFLAGS ?= ${CFLAGS}
-LDFLAGS ?=  -Wl,-rpath=. `pkg-config lua5.1 jack --libs`
+LDFLAGS ?=  -Wl,-rpath=. `pkg-config lua5.1 jack lilv-0 --libs`
 
-jiss.so: luarun.h jiss_wrap.o disposable.o engine.o heap.o main.o sequence.o
+jiss.so: luarun.h jiss_wrap.o disposable.o engine.o heap.o main.o sequence.o lv2.o
 	g++ -O3 -rdynamic -Wall -shared -fPIC $(CFLAGS) -o jiss.so *.o $(LDFLAGS) 
 
 luarun.h:
